@@ -1,22 +1,23 @@
 package net.uku3lig.potioncounter;
 
+import com.google.common.collect.Iterables;
 import lombok.Getter;
 import net.minecraft.client.font.TextRenderer;
 import net.minecraft.client.gui.DrawContext;
-import net.minecraft.entity.effect.StatusEffect;
+import net.minecraft.component.DataComponentTypes;
+import net.minecraft.component.type.PotionContentsComponent;
 import net.minecraft.entity.effect.StatusEffectInstance;
 import net.minecraft.entity.player.PlayerInventory;
 import net.minecraft.item.ItemStack;
 import net.minecraft.item.Items;
 import net.minecraft.potion.Potion;
-import net.minecraft.potion.PotionUtil;
-import net.minecraft.potion.Potions;
-import net.minecraft.registry.Registries;
+import net.minecraft.registry.entry.RegistryEntry;
 import net.uku3lig.potioncounter.config.PotionCounterConfig;
 import net.uku3lig.ukulib.config.ConfigManager;
 
 import java.awt.*;
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -27,34 +28,33 @@ public class PotionCounter {
     public static final ItemStack SPLASH_POT = new ItemStack(Items.SPLASH_POTION);
 
     public static List<ItemStack> getPotions(PlayerInventory inventory) {
-        Stream<ItemStack> stream = inventory.main.stream().filter(i -> i.isOf(SPLASH_POT.getItem()));
+        Stream<RegistryEntry<Potion>> stream = inventory.main.stream()
+                .filter(stack -> stack.isOf(SPLASH_POT.getItem()))
+                .map(stack -> stack.get(DataComponentTypes.POTION_CONTENTS))
+                .filter(Objects::nonNull)
+                .filter(comp -> comp.potion().isPresent())
+                .map(comp -> comp.potion().get());
+
         if (manager.getConfig().isShowUpgrades()) {
-            return stream.collect(Collectors.groupingBy(PotionUtil::getPotion, Collectors.counting()))
+            return stream.collect(Collectors.groupingBy(pot -> pot, Collectors.counting()))
                     .entrySet().stream()
-                    .filter(e -> e.getKey().getEffects().stream().noneMatch(s -> manager.getConfig().getDisabledPotions().contains(s.getEffectType().getTranslationKey())))
-                    .map(e -> PotionUtil.setPotion(new ItemStack(Items.SPLASH_POTION, e.getValue().intValue()), e.getKey()))
+                    .filter(entry -> Iterables.all(entry.getKey().value().getEffects(), eff -> !manager.getConfig().getDisabledPotions().contains(eff.getEffectType().value().getTranslationKey())))
+                    .map(entry -> PotionContentsComponent.createStack(Items.SPLASH_POTION, entry.getKey()).copyWithCount(entry.getValue().intValue()))
                     .toList();
         } else {
-            return stream.filter(i -> !PotionUtil.getPotionEffects(i).isEmpty())
-                    .map(PotionUtil::getPotionEffects)
-                    .map(l -> l.get(0))
-                    .map(StatusEffectInstance::getEffectType)
-                    .collect(Collectors.groupingBy(e -> e, Collectors.counting()))
+            return stream
+                    .map(pot -> pot.value().getEffects())
+                    .filter(effs -> !effs.isEmpty())
+                    .collect(Collectors.groupingBy(l -> l.getFirst().getEffectType(), Collectors.counting()))
                     .entrySet().stream()
-                    .filter(e -> !manager.getConfig().getDisabledPotions().contains(e.getKey().getTranslationKey()))
-                    .map(e -> {
-                        Potion potion = Registries.POTION.stream()
-                                .filter(p -> p.getEffects().stream().anyMatch(s -> effectEquals(s.getEffectType(), e.getKey())))
-                                .findFirst().orElse(null);
-                        return PotionUtil.setPotion(new ItemStack(Items.SPLASH_POTION, e.getValue().intValue()), potion);
+                    .filter(entry -> !manager.getConfig().getDisabledPotions().contains(entry.getKey().value().getTranslationKey()))
+                    .map(entry -> {
+                        ItemStack stack = new ItemStack(Items.SPLASH_POTION, entry.getValue().intValue());
+                        stack.set(DataComponentTypes.POTION_CONTENTS, PotionContentsComponent.DEFAULT.with(new StatusEffectInstance(entry.getKey())));
+                        return stack;
                     })
-                    .filter(i -> !PotionUtil.getPotion(i).equals(Potions.EMPTY))
                     .toList();
         }
-    }
-
-    public static boolean effectEquals(StatusEffect first, StatusEffect other) {
-        return first.getTranslationKey().equalsIgnoreCase(other.getTranslationKey()) && first.getColor() == other.getColor();
     }
 
     public static void renderPotions(DrawContext context, List<ItemStack> items, int x, int y, int scaledWidth, int scaledHeight, TextRenderer textRenderer) {
@@ -63,14 +63,15 @@ public class PotionCounter {
             y = 5;
         }
 
-        // position.isBottom() <=> y >= height / 2 <=> (height / 2) - y <= 0
-        boolean isBottom = (scaledWidth / 2f) <= x;
-        // position.isRight() <=> x >= width / 2
-        boolean isRight = (scaledHeight / 2f) <= y;
+        boolean isBottom = y > (scaledHeight / 2f);
+        boolean isRight = x > (scaledWidth / 2f);
 
         for (int i = 0; i < items.size(); i++) {
             ItemStack item = items.get(i);
-            String baseName = Optional.ofNullable(item.getNbt()).map(nbt -> nbt.getString(PotionUtil.POTION_KEY)).orElse(null);
+            String baseName = Optional.ofNullable(item.get(DataComponentTypes.POTION_CONTENTS))
+                    .flatMap(PotionContentsComponent::potion)
+                    .map(RegistryEntry::getIdAsString)
+                    .orElse(null);
 
             int textOffset = 0;
             int ly = y + 18 * i * (int) Math.signum((scaledHeight / 2f) - y);
@@ -89,8 +90,8 @@ public class PotionCounter {
             String text = String.valueOf(item.getCount());
             int textWidth = textRenderer.getWidth(text);
 
-            context.drawItem(item, isBottom ? x - 16 : x, isRight ? ly - 16 : ly);
-            context.drawText(textRenderer, text, isBottom ? x - 18 - textWidth - textOffset : x + 18 + textOffset, (isRight ? ly - 16 : ly) + textRenderer.fontHeight / 2, Color.WHITE.getRGB(), true);
+            context.drawItem(item, isRight ? x - 16 : x, isBottom ? ly - 16 : ly);
+            context.drawText(textRenderer, text, isRight ? x - 18 - textWidth - textOffset : x + 18 + textOffset, (isBottom ? ly - 16 : ly) + textRenderer.fontHeight / 2, Color.WHITE.getRGB(), true);
         }
     }
 
